# ncnn-anroid-yolov8-obb

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/pipikai/github/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov8n-obb-sim-opt-fp16.param  yolov8s-obb-sim-opt-fp16.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/opencv-mobile-2.4.13.7-android/sdk/native/jni/: OpenCVConfig.cmake  OpenCVModules_arm64_v8a.cmake  OpenCVModules_armeabi_v7a.cmake  OpenCVModules_x86.cmake  OpenCVModules_x86_64.cmake
app/src/main/cpp/opencv-mobile-2.4.13.7-android/sdk/native/jni/include/opencv2/core/: core.hpp
app/src/main/cpp/src/: yolo.cpp  yolo.h
app/src/main/java/com/pipikai/github/: MainActivity.kt  YoloNcnn.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/pipikai/github/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
